--- a/admin/pageaudit/report/templates/reports_dashboard.html
+++ b/admin/pageaudit/report/templates/reports_dashboard.html
@@ -12,8 +12,9 @@
 
 
 {% block extraFiles %}
-
     <link href="{% static 'report/css/c3.min.css' %}" rel="stylesheet">
+    <link href="{% static 'report/css/select2.min.css' %}" rel="stylesheet"/>
+    <script src="{% static 'report/js/select2.min.js' %}"></script>
     
     <style> 
            
@@ -160,6 +161,9 @@
                 createPieFmp();
                 createPieFcp();
                 createPieFi();
+                $("select").select2({
+                    minimumResultsForSearch: 8
+                });
             });
             
             
@@ -171,7 +175,15 @@
 
 
 {% block content %}
-    
+    <div class="{{ templateHelpers.classes.grid }} mt4">
+        {% include "switch_filter_view.html" with filter=filter view_name='browse' %}
+        <form id="pl-sortform" aria-label="Apply filters" action="" method="get">
+            {% include "url_filter_select.html" with filter=filter filters=filters view_name='dashboard' %}
+            <div style="margin-right: 60px; display: inline-block;">
+                <button id="apply" type="submit" class="{{ templateHelpers.classes.smallButton }} {{ templateHelpers.classes.bluePriButton }} relative" style="top:2px;">Apply</button>
+            </div>
+        </form>
+    </div>
     <div class="{{ templateHelpers.classes.grid }} tc mt4">
         <p class="f4 b pb2">Average scores across <code class="fw4 dark-red">{{ urlCountTested|withComma }}</code> tested URLs</p>
         
